change resource pathing